route/route-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: tlsapp
    app.kubernetes.io/component: tlsapp
    app.kubernetes.io/instance: tlsapp
  name: tlsapp
spec:
  host: tlsapp.apps-crc.testing
  port:
    targetPort: 80-tcp
  tls:
    certificate: "-----BEGIN CERTIFICATE-----\r\nMIIDJTCCAg2gAwIBAgIUKfkObIxQw+7rIiJ/lZhLS+U6CaswDQYJKoZIhvcNAQEL\r\nBQAwIjEgMB4GA1UEAwwXdGxzYXBwLmFwcHMtY3JjLnRlc3RpbmcwHhcNMjYwNDIy\r\nMDI1MjQ3WhcNMjcwNDIyMDI1MjQ3WjAiMSAwHgYDVQQDDBd0bHNhcHAuYXBwcy1j\r\ncmMudGVzdGluZzCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAM9rhK0a\r\nmDJG9NaaJ57hZr0sl2ClAv3kyJi9xD5SYZO9qU/5jq2mOVBsyAGIa+PEucVias9u\r\n2QtzxiGJHoZcu+DqFa7MPN/udqLWciPRud08BB2Vv0KbWFrePLklQaE6cpDnQtc2\r\nMUt0+IXNriBPTNk8F/AELV24NMPlJNs1TSXKcpUng9j [...]
      CERTIFICATE-----\r\n"
    key: "-----BEGIN PRIVATE KEY-----\r\nMIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDPa4StGpgyRvTW\r\nmiee4Wa9LJdgpQL95MiYvcQ+UmGTvalP+Y6tpjlQbMgBiGvjxLnFYmrPbtkLc8Yh\r\niR6GXLvg6hWuzDzf7nai1nIj0bndPAQdlb9Cm1ha3jy5JUGhOnKQ50LXNjFLdPiF\r\nza4gT0zZPBfwBC1duDTD5STbNU0lynKVJ4PY+3MlSXtOGRvXpVIFi2dpFpHa+FXD\r\n/TbrVxLFMhOQUY0thoQmkN02Qo8K7QD6Tunv7pdiGR5RDtrs2ntMSA207kkhIJJ4\r\n7bbNeuT11H/1eWAaXo2crB4gDIJVnyphcRqh88fpCQohOuKiA5xkhlGKPTXyFEsl\r\nvWUr14x/AgMBAAECggEAOOT0nSjc03msIgthz85jCIPpN+y7T9p [...]
      PRIVATE KEY-----\r\n"
    termination: edge
  to:
    kind: ""
    name: tlsapp
    weight: null
status: {}
